<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/activity_details" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fuseActivityThumb"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <VideoView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fuseActivityVideo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/dateLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/date_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateValue"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/dateLabel"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ZoomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zoomButton" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/workoutLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/activity_type_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workoutValue"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/workoutLabel"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/trainerLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/trainer_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trainerValue"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/trainerLabel"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/trainerNotesLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/trainer_notes_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trainerNotesValue"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/trainerNotesLabel"/>
    </RelativeLayout>
</LinearLayout>